[tool.poetry]
name = "wtk-lib"
version = "0.1.0"
description = "Common functions"
authors = ["Andrew M <whatareyourjob@protonmail.com>"]
readme = "README.md"
packages = [{include = "wtk"}]

[tool.poetry.dependencies]
python = ">=3.12.0,<3.13"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
